--- a/main.ipynb
+++ b/main.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +82,33 @@
    "metadata": {},
    "source": [
     "## Importing the data <a id=\"data-import\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv(\"datasets/fashion-mnist_train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = pd.read_csv(\"datasets/fashion-mnist_test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df_test, df_train])"
    ]
   },
   {
@@ -121,8 +148,24 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "161362581c5e242698d3103ed4f70d59c0b4c9ba59e6a7878f60943ef00e1f3c"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('dat158': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
