--- a/main.ipynb
+++ b/main.ipynb
@@ -711,7 +711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll check the label distribution..."
+    "We can confirm that the training set contains 60.000 entries. It seems the rows start with the label at index 0 and the remaining entries are the pixel values."
    ]
   },
   {
@@ -750,7 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... and they seem perfectly distributed"
+    "The labels are also evenly distributed; we are not dealing with an imbalanced classification problem."
    ]
   },
   {
@@ -791,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want our data to be shaped as 28x28."
+    "We want our data in the shape of 28px x 28px."
    ]
   },
   {
@@ -1030,26 +1030,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Label y data type       : int64\n",
-      "Image pixel x data type : int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Checking the data type of x and y\n",
-    "print(\"Label y data type       :\", y.dtype)\n",
-    "print(\"Image pixel x data type :\", x.dtype)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1087,7 +1067,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before feeding our model we want to scale these values to a range of 0 to 1. We do this for both the <i>training set</i> and the <i>test set</i>:"
+    "Before feeding our model we want to scale these values to a range of 0 to 1. This will, among other things, help our neural networks converge faster under training. We do this for both the <i>training set</i> and the <i>test set</i>:"
    ]
   },
   {
@@ -1797,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,78 +1835,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "batchsize fafafafa"
+    "We will train our model we will employ Mini-batch Gradient Descent. This helps us achieve the advantages of both Stocastic Gradient Descent (SGD) and Batch Gradient Descent. Popular batch sizes include 32, 64 and 128 samples. We will be using 128 samples for this model. Our dataset does not divide evenly by this batch size, but that simply means our final batch has fewer samples than the others.\n",
+    "\n",
+    "As for epochs, they define the number of times the model will work through the training set. Our deployed model has worked through the training set with epochs = 15. The number of epochs used can also be used to plot loss or accuracy of the model over time. This can be used to evaluate if the model is over-fitted, under-fitted or suitably fitted to the training set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/15\n",
-      "600/600 [==============================] - 13s 22ms/step - loss: 0.6489 - accuracy: 0.7648\n",
-      "Epoch 2/15\n",
-      "600/600 [==============================] - 13s 22ms/step - loss: 0.4368 - accuracy: 0.8411\n",
-      "Epoch 3/15\n",
-      "600/600 [==============================] - 13s 22ms/step - loss: 0.3880 - accuracy: 0.8614\n",
-      "Epoch 4/15\n",
-      "600/600 [==============================] - 13s 21ms/step - loss: 0.3625 - accuracy: 0.8692\n",
-      "Epoch 5/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.3397 - accuracy: 0.8776\n",
-      "Epoch 6/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.3221 - accuracy: 0.8837\n",
-      "Epoch 7/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.3108 - accuracy: 0.8884\n",
-      "Epoch 8/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.2995 - accuracy: 0.8906\n",
-      "Epoch 9/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.2938 - accuracy: 0.8935\n",
-      "Epoch 10/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.2859 - accuracy: 0.8965\n",
-      "Epoch 11/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.2781 - accuracy: 0.8996\n",
-      "Epoch 12/15\n",
-      "600/600 [==============================] - 12s 21ms/step - loss: 0.2740 - accuracy: 0.8993\n",
-      "Epoch 13/15\n",
-      "600/600 [==============================] - 13s 21ms/step - loss: 0.2676 - accuracy: 0.9030\n",
-      "Epoch 14/15\n",
-      "600/600 [==============================] - 13s 22ms/step - loss: 0.2647 - accuracy: 0.9045\n",
-      "Epoch 15/15\n",
-      "600/600 [==============================] - 13s 22ms/step - loss: 0.2603 - accuracy: 0.9057\n"
+      "Epoch 1/40\n",
+      "600/600 [==============================] - 15s 25ms/step - loss: 0.6369 - accuracy: 0.7688\n",
+      "Epoch 2/40\n",
+      "600/600 [==============================] - 16s 27ms/step - loss: 0.4278 - accuracy: 0.8472\n",
+      "Epoch 3/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.3804 - accuracy: 0.8630\n",
+      "Epoch 4/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.3540 - accuracy: 0.8721\n",
+      "Epoch 5/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.3365 - accuracy: 0.8798\n",
+      "Epoch 6/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.3204 - accuracy: 0.8856\n",
+      "Epoch 7/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.3067 - accuracy: 0.8904\n",
+      "Epoch 8/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2996 - accuracy: 0.8923\n",
+      "Epoch 9/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.2933 - accuracy: 0.8941\n",
+      "Epoch 10/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2814 - accuracy: 0.8984\n",
+      "Epoch 11/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.2784 - accuracy: 0.8982\n",
+      "Epoch 12/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2729 - accuracy: 0.9000\n",
+      "Epoch 13/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2676 - accuracy: 0.9018\n",
+      "Epoch 14/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2625 - accuracy: 0.9047\n",
+      "Epoch 15/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2575 - accuracy: 0.9064\n",
+      "Epoch 16/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2527 - accuracy: 0.9073\n",
+      "Epoch 17/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2500 - accuracy: 0.9085\n",
+      "Epoch 18/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2481 - accuracy: 0.9098\n",
+      "Epoch 19/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.2442 - accuracy: 0.9087\n",
+      "Epoch 20/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2424 - accuracy: 0.9109\n",
+      "Epoch 21/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2409 - accuracy: 0.9118\n",
+      "Epoch 22/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2378 - accuracy: 0.9125\n",
+      "Epoch 23/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2355 - accuracy: 0.9137\n",
+      "Epoch 24/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2334 - accuracy: 0.9147\n",
+      "Epoch 25/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2271 - accuracy: 0.9159\n",
+      "Epoch 26/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2290 - accuracy: 0.9156\n",
+      "Epoch 27/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2262 - accuracy: 0.9165\n",
+      "Epoch 28/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2239 - accuracy: 0.9172\n",
+      "Epoch 29/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2223 - accuracy: 0.9202\n",
+      "Epoch 30/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.2199 - accuracy: 0.9199\n",
+      "Epoch 31/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.2187 - accuracy: 0.9198\n",
+      "Epoch 32/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2164 - accuracy: 0.9200\n",
+      "Epoch 33/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2163 - accuracy: 0.9198\n",
+      "Epoch 34/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2158 - accuracy: 0.9207\n",
+      "Epoch 35/40\n",
+      "600/600 [==============================] - 15s 24ms/step - loss: 0.2115 - accuracy: 0.9218\n",
+      "Epoch 36/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2117 - accuracy: 0.9218\n",
+      "Epoch 37/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2104 - accuracy: 0.9217\n",
+      "Epoch 38/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2103 - accuracy: 0.9223\n",
+      "Epoch 39/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2079 - accuracy: 0.9227\n",
+      "Epoch 40/40\n",
+      "600/600 [==============================] - 14s 24ms/step - loss: 0.2055 - accuracy: 0.9236\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x272f1c81c70>"
+       "<tensorflow.python.keras.callbacks.History at 0x272f179eee0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "batch_size = 100\n",
-    "epochs = 15\n",
+    "batch_size = 128\n",
+    "epochs = 40\n",
     "\n",
     "model_cnn.fit(X_train_cnn, y_train, batch_size=batch_size, epochs=epochs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 2ms/step - loss: 0.2406 - accuracy: 0.9122\n"
+      "313/313 [==============================] - 1s 3ms/step - loss: 0.2123 - accuracy: 0.9230\n"
      ]
     }
    ],
@@ -2138,6 +2170,11 @@
     "    <li>\n",
     "        Brownlee, J. (2017, July 3) <i>Gentle Introduction to the Adam Optimization Algorithm for Deep Learning</i><br>\n",
     "        <a href=https://machinelearningmastery.com/adam-optimization-algorithm-for-deep-learning/>https://machinelearningmastery.com/adam-optimization-algorithm-for-deep-learning/</a>\n",
+    "    </li>\n",
+    "    <br>\n",
+    "    <li>\n",
+    "        Brownlee, J. (2018, July 20) <i>Difference Between a Batch and an Epoch in a Neural Network</i><br>\n",
+    "        <a href=https://machinelearningmastery.com/difference-between-a-batch-and-an-epoch/>https://machinelearningmastery.com/difference-between-a-batch-and-an-epoch/</a>\n",
     "    </li>\n",
     "    <br>\n",
     "    <li>\n",
